= Version descriptions

== master

- Can import previously exported data
- Notification icon is now in sync with the launcher icon

== 1.0

- Initial release
- Can store past sleeps
- Can count average duration of them